[feat](HomePage) fixed header resizing on smaller computer screens

--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -176,7 +176,7 @@ header {
 header {
     position: relative;
     width: 100%;
-    height: 850px;
+    height: 900px;
     text-align: center;
     color: #fff;
     background-image: url(http://hdwallpapersfit.com/wp-content/uploads/2015/03/laptop-background.jpg);
